--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   <button id="delete-btn">DELETE ALL</button>
   <ul id="ul-el"></ul>
   <!-- <div id="welcome-el"></div> -->
-  <script src="./scripts/script.js"></script>
+  <script type="module" src="./scripts/script.js"></script>
 </body>
 </html>
