add label, placeholder and max-width

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/style.css">
-  <title>Chrome Extension</title>
+  <title>Leads Tracker</title>
 </head>
 <body>
-  <input type="text" id="input-el">
-  <button id="input-btn">SAVE INPUT</button>
-  <button id="delete-btn">DELETE ALL</button>
+  <label for="">Enter URL:</label>
+  <input type="text" id="input-el" placeholder="https://medinsure.com">
+  <div id="btn-grp">
+    <button id="input-btn">SAVE INPUT</button>
+    <button id="delete-btn">DELETE ALL</button>
+  </div>
   <ul id="ul-el"></ul>
   <!-- <div id="welcome-el"></div> -->
   <script type="module" src="./scripts/script.js"></script>
