--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/style.css">
-  <link rel="shortcut icon" href="./icon.png" type="image/png">
+  <link rel="shortcut icon" href="./assets/favicon.ico" type="image/png">
   <title>Leads Tracker</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
+  <link rel="manifest" href="./site.webmanifest">
 </head>
+
 <body>
   <label for="">Enter URL:</label>
   <input type="text" id="input-el" placeholder="https://medinsure.com">
@@ -15,7 +21,7 @@
     <button id="delete-btn">DELETE ALL</button>
   </div>
   <ul id="ul-el"></ul>
-  <!-- <div id="welcome-el"></div> -->
   <script type="module" src="./scripts/script.js"></script>
 </body>
+
 </html>
